# couchadapter

./: .gitignore  .gitlab-ci.yml  README.md  docker-compose.yml  manage.py  pyproject.toml  python3.7.dockerfile  python3.8.dockerfile  requirements.txt  setup.cfg
DjangoTesting/: asgi.py  settings.py  wsgi.py
couchadapter/: __init__.py  apps.py  fields.py  indexer.py  mapper.py  models.py  preview_mode.py  query.py  specification.py  tests.py  version.py
couchadapter/management/commands/: idx-as.py  idx-qs.py
couchadapter/management/djangotoolbox/: admin.py  errorviews.py  fields.py  http.py  middleware.py  test.py  utils.py  widgets.py
couchadapter/management/djangotoolbox/db/: base.py
couchadapter/test/: test_analytics.py  test_filter.py  test_indexer.py  test_mapper.py  test_query_result.py  test_save_multi.py
couchadapter/test/author_fixture/: models.py
