[metadata]
name=couchadapter
version = attr: couchadapter.__version__

url=https://gitlab.artistrazh.tech/n.kalinkin/couchadapter
author=Nikita <artistrazh> Kalinkin
author_email=n.kalinkin@artistrazh.tech

[options]
python_requires = >=3.7
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    asgiref==3.2.10
    certifi==2021.5.30
    chardet==4.0.0
    Django==3.1
    durationpy==0.5
    idna==2.10
    mypy-extensions==0.4.3
    pyrsistent==0.18.0
    python-dateutil==2.8.1
    pytz==2021.1
    requests==2.25.1
    shortuuid==1.0.1
    six==1.15.0
    sqlparse==0.4.1
    urllib3==1.26.6
    wrapt==1.12.1